fix(ModalSessao): remove o overflow que estava dos componentes no modal de edição das sessões

--- a/frontend/src/components/Modals/ModalSessao/style.scss
+++ b/frontend/src/components/Modals/ModalSessao/style.scss
@@ -4,4 +4,5 @@
     .tipo-sessao{
         font-size: 18px;
     }
+    max-width: 750px;
 }
